# insect-mobile-app

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run_android.sh  run_app.sh  run_web.sh
src/: main.py
src/utils/: on_picker_result.py  running_platform.py  user_popup.py
