[project]
name = "Open Insect ID"
version = "0.1.0"
description = "Recognize an insect in seconds with Open Insect ID"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Elnix90", email = "elnix91@gmail.com" },
    { name = "YoannDev90", email = "yoanndev@outlook.fr" },
    { name = "LuckyTheCookie", email = "" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "org"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Open Insect Id"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (c) 2025 Open Insect-ID"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.flet.android]
split_per_abi = true

[tool.flet.android.permission] # --android-permissions
"android.permission.CAMERA" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true

[tool.flet.android.feature] # --android-features
"android.hardware.camera" = false